--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,7 @@
             android:layout_marginStart="108dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="132dp"
+            android:checkedButton="@id/radioButtonMasculino"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4">
@@ -182,7 +183,7 @@
 
         <Spinner
             android:id="@+id/spinnerPais"
-            android:layout_width="407dp"
+            android:layout_width="385dp"
             android:layout_height="52dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="2dp"
@@ -302,8 +303,8 @@
 
         <TextView
             android:id="@+id/textViewNivelSatisfaccion"
-            android:layout_width="113dp"
-            android:layout_height="23dp"
+            android:layout_width="143dp"
+            android:layout_height="41dp"
             android:layout_marginStart="149dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="149dp"
@@ -323,7 +324,7 @@
             android:splitTrack="false"
             android:text="@string/suscripci_n_al_bolet_n_informativo"
             android:thumbTint="#9575CD"
-            android:trackTint="#101010"
+            android:trackTint="#BA68C8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -332,12 +333,12 @@
 
         <TextView
             android:id="@+id/textViewMostrar"
-            android:layout_width="413dp"
-            android:layout_height="303dp"
+            android:layout_width="371dp"
+            android:layout_height="305dp"
             android:layout_marginTop="52dp"
             android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.166"
+            app:layout_constraintHorizontal_bias="0.583"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonGuardar" />
 
