Solo falta el bundle

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -17,22 +17,22 @@
 
         <TextView
             android:id="@+id/textViewTítulo"
-            android:layout_width="211dp"
-            android:layout_height="30dp"
+            android:layout_width="388dp"
+            android:layout_height="68dp"
             android:fontFamily="@font/brawler"
             android:text="@string/mi_perfil_personal"
-            android:textSize="20sp"
+            android:textSize="34sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.92"
+            app:layout_constraintHorizontal_bias="0.661"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.066" />
+            app:layout_constraintVertical_bias="0.058" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="155dp"
-            android:layout_height="136dp"
+            android:layout_width="204dp"
+            android:layout_height="202dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textViewTítulo"
             app:layout_constraintHorizontal_bias="0.0"
@@ -45,8 +45,8 @@
             android:id="@+id/editTextNombre"
             android:layout_width="168dp"
             android:layout_height="51dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="76dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="352dp"
             android:defaultFocusHighlightEnabled="false"
             android:ems="10"
             android:inputType="text"
@@ -58,12 +58,12 @@
             android:layout_width="167dp"
             android:layout_height="48dp"
             android:layout_marginStart="152dp"
-            android:layout_marginTop="27dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="104dp"
             android:ems="10"
             android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.083"
+            app:layout_constraintHorizontal_bias="0.324"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextApellido" />
 
@@ -71,20 +71,21 @@
             android:id="@+id/editTextApellido"
             android:layout_width="171dp"
             android:layout_height="53dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="76dp"
-            android:layout_marginBottom="27dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="88dp"
             android:ems="10"
             android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/editTextCorreo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.235"
+            app:layout_constraintStart_toEndOf="@+id/textViewApellido"
             app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />
 
         <TextView
             android:id="@+id/textViewNombre"
             android:layout_width="109dp"
             android:layout_height="30dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="76dp"
             android:layout_marginTop="69dp"
             android:layout_marginBottom="28dp"
             android:text="@string/nombre"
@@ -92,16 +93,16 @@
             app:layout_constraintBottom_toTopOf="@+id/editTextApellido"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
             app:layout_constraintWidth_percent="0.257" />
 
         <TextView
             android:id="@+id/textViewApellido"
             android:layout_width="107dp"
             android:layout_height="26dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginBottom="26dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="28dp"
             android:text="@string/apellido"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textViewCorreo"
@@ -114,19 +115,20 @@
             android:layout_width="117dp"
             android:layout_height="54dp"
             android:layout_marginStart="28dp"
-            android:layout_marginTop="26dp"
-            android:layout_marginEnd="6dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="17dp"
             android:text="@string/correo_electr_nico"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/editTextCorreo"
+            app:layout_constraintHorizontal_bias="0.455"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewApellido"
             app:layout_constraintWidth_percent="0.257" />
 
         <RadioGroup
             android:id="@+id/radioGroup"
-            android:layout_width="173dp"
-            android:layout_height="143dp"
+            android:layout_width="293dp"
+            android:layout_height="210dp"
             android:layout_marginStart="108dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="132dp"
@@ -138,71 +140,75 @@
             <RadioButton
                 android:id="@+id/radioButtonMasculino"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="77dp"
                 android:text="@string/masculino" />
 
             <RadioButton
                 android:id="@+id/radioButtonFemenino"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="70dp"
                 android:text="@string/femenino" />
 
             <RadioButton
                 android:id="@+id/radioButtonOtro"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="63dp"
                 android:text="@string/otro" />
         </RadioGroup>
 
         <TextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="79dp"
+            android:layout_height="30dp"
             android:layout_marginStart="166dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="194dp"
             android:text="@string/g_nero"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.19"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextCorreo" />
 
         <Button
             android:id="@+id/buttonGuardar"
-            android:layout_width="135dp"
-            android:layout_height="96dp"
+            android:layout_width="179dp"
+            android:layout_height="132dp"
             android:layout_marginStart="243dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="33dp"
             android:backgroundTint="#4CAF50"
             android:text="@string/guardar"
             android:textColor="#FFFFFF"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.844"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/switchBoletin" />
 
         <Spinner
             android:id="@+id/spinnerPais"
-            android:layout_width="385dp"
-            android:layout_height="52dp"
+            android:layout_width="642dp"
+            android:layout_height="48dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="51dp"
             app:layout_constraintBottom_toTopOf="@+id/textViewIntereses"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.151"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewPais" />
 
         <TextView
             android:id="@+id/textViewPais"
-            android:layout_width="178dp"
-            android:layout_height="23dp"
+            android:layout_width="221dp"
+            android:layout_height="40dp"
             android:layout_marginStart="107dp"
             android:layout_marginTop="26dp"
             android:layout_marginEnd="126dp"
             android:layout_marginBottom="15dp"
             android:text="@string/selecciona_pa_s_de_origen"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/spinnerPais"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -235,15 +241,17 @@
 
         <TextView
             android:id="@+id/textViewIntereses"
-            android:layout_width="217dp"
-            android:layout_height="40dp"
+            android:layout_width="253dp"
+            android:layout_height="38dp"
             android:layout_marginStart="26dp"
             android:layout_marginTop="51dp"
             android:layout_marginEnd="168dp"
             android:layout_marginBottom="6dp"
             android:text="@string/selecciona_uno_o_m_s_hobbies"
+            android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@+id/checkBoxDeporte"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.706"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinnerPais" />
 
@@ -275,8 +283,8 @@
 
         <SeekBar
             android:id="@+id/seekBarSatisfaccion"
-            android:layout_width="313dp"
-            android:layout_height="32dp"
+            android:layout_width="412dp"
+            android:layout_height="44dp"
             android:layout_marginStart="52dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="46dp"
@@ -291,12 +299,13 @@
 
         <TextView
             android:id="@+id/textViewSatisfaccion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="268dp"
+            android:layout_height="36dp"
             android:layout_marginStart="92dp"
             android:layout_marginTop="38dp"
             android:layout_marginEnd="102dp"
             android:text="@string/seleccione_su_nivel_de_satisfacci_n"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/checkBoxMusica" />
@@ -315,14 +324,15 @@
 
         <Switch
             android:id="@+id/switchBoletin"
-            android:layout_width="176dp"
-            android:layout_height="136dp"
+            android:layout_width="356dp"
+            android:layout_height="111dp"
             android:layout_marginStart="107dp"
             android:layout_marginTop="52dp"
             android:layout_marginEnd="128dp"
             android:checked="false"
             android:splitTrack="false"
             android:text="@string/suscripci_n_al_bolet_n_informativo"
+            android:textSize="20sp"
             android:thumbTint="#9575CD"
             android:trackTint="#BA68C8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -333,8 +343,8 @@
 
         <TextView
             android:id="@+id/textViewMostrar"
-            android:layout_width="371dp"
-            android:layout_height="305dp"
+            android:layout_width="458dp"
+            android:layout_height="297dp"
             android:layout_marginTop="52dp"
             android:layout_marginEnd="4dp"
             android:textSize="18sp"
